# bigxml

./: .coveragerc  .gitignore  .isort.cfg  .prettierrc.yaml  .pylintrc  404.html  CHANGELOG.md  LICENSE.txt  README.md  dev-requirements.txt  index.html  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  search.html  setup.cfg  sitemap.xml  tox.ini
.github/workflows/: build.yml
decorators/: index.html
docs/: conftest.py  mkdocs.yml
docs/src/: decorators.md  encodings.md  exceptions.md  handlers.md  index.md  namespaces.md  quickstart.md  recipes.md  streams.md  typing.md
docs/src/css/: extra.css
encodings/: index.html
exceptions/: index.html
faq/: index.html
handlers/: index.html
namespaces/: index.html
nodes/: index.html
parser/: index.html
quickstart/: index.html
recipes/: index.html
search/: search_index.json
src/: CNAME  decorators.md  encodings.md  faq.md  handlers.md  index.md  namespaces.md  nodes.md  parser.md  quickstart.md  streams.md
src/bigxml/: __init__.py  elements.py  exceptions.py  handle_mgr.py  handler.py  handler_creator.py  handler_marker.py  marks.py  nodes.py  parser.py  stream.py  typing.py  utils.py
src/css/: extra.css
streams/: index.html
stubs/defusedxml/: ElementTree.pyi  __init__.pyi
tests/: conftest.py
tests/integration/: README.md  comments.xml  maths.xml  namespaces.xml  test_comments.py  test_encodings.py  test_invalid_xml.py  test_maths.py  test_namespaces.py  test_ram_usage.py  test_security.py  test_typing.py  test_wikipedia_export.py  wikipedia_python_export.xml.xz
tests/unit/: test_elements_get_text.py  test_exceptions.py  test_handle_mgr.py  test_handler_class.py  test_handler_creator.py  test_handler_creators.py  test_handler_marker.py  test_handler_markers.py  test_marks.py  test_nodes_element_attributes.py  test_nodes_element_get_text.py  test_parser.py  test_stream.py  test_utils_autostart_generator.py  test_utils_dictify.py  test_utils_extract_namespace_name.py  test_utils_get_mandatory_params.py  test_utils_iter_with_rollback.py  test_utils_iterable.py  test_utils_last_item_or_none.py
typing/: index.html
