[project]
dynamic = ["version"]
name = "bigxml"
authors = [{ name = "Rogdham", email = "contact@rogdham.net" }]
description = "Pythonic xml parser to handle big files or streams"
readme = { file = "README.md", content-type = "text/markdown" }
keywords = ["xml", "parser", "big", "stream"]
license.file = "LICENSE.txt"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
    "Topic :: Text Processing :: Markup :: XML",
]
requires-python = ">=3.9"
dependencies = [
    "defusedxml>=0.7.1",
    "typing-extensions>=4.6.0 ; python_version<'3.12'",
]

[project.urls]
Homepage = "https://github.com/rogdham/bigxml"
Documentation = "https://bigxml.rogdham.net/"
Source = "https://github.com/rogdham/bigxml"

#
# build
#

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"


#
# coverage
#

[tool.coverage.html]
directory = "coverage"

[tool.coverage.paths]
source = [
    "src/bigxml/",
    ".tox/py*/lib/python*/site-packages/bigxml/",
    ".tox/py*/site-packages/bigxml/",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "if __name__ == \"__main__\":",
    "@overload",
    "if TYPE_CHECKING:",
]
show_missing = true

[tool.coverage.run]
branch = true
source = ["bigxml"]

#
# mypy
#

[tool.mypy]
# Import discovery
files = "src"
ignore_missing_imports = false
follow_imports = "normal"
mypy_path = "stubs"
# Platform configuration
python_version = 3.13
# Disallow dynamic typing
disallow_any_unimported = true
disallow_any_decorated = true
disallow_any_generics = true
disallow_subclassing_any = true
# Untyped definitions and calls
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
# None and Optional handling
no_implicit_optional = true
strict_optional = true
# Configuring warning
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
# Suppressing errors
ignore_errors = false
# Miscellaneous strictness flags
strict_equality = true
# Configuring error messages
show_error_context = true
show_error_codes = true
# Miscellaneous
warn_unused_configs = true


#
# pytest
#

[tool.pytest.ini_options]
addopts = """
    --cov
    --doctest-glob='*.md'
    --doctest-modules --strict-markers
    """
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE", "NUMBER"]
filterwarnings = ["error"]
markers = ["docs", "integration", "unit"]
testpaths = ["docs", "tests"]


#
# ruff
#

[tool.ruff]
src = ["src"]
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101",
    "ANN102",
    "C901",
    "COM812",
    "D",
    "E501",
    "EM",
    "ERA001",
    "FA100",
    "ISC001",
    "PLR0912",
    "TRY003",
    "TRY301",
]

[tool.ruff.lint.per-file-ignores]
"docs/**" = ["D", "INP001", "PTH109"]
"stubs/**" = ["D"]
"tests/**" = ["D", "FBT", "INP001", "PLR2004", "S101", "SLF001"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["bigxml"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "list"
