[metadata]
name = bigxml
author = Rogdham
author_email = contact@rogdham.net
description = Pythonic xml parser to handle big files or streams
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rogdham/bigxml
keywords = xml parser big stream
license = MIT
license_files = LICENSE.txt
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Utilities
    Topic :: Text Processing :: Markup :: XML

[options]
package_dir = =src
packages = bigxml
setup_requires =
    setuptools_scm
    wheel
install_requires =
    dataclasses~=0.7;python_version=="3.6"
    defusedxml~=0.7.1
