[metadata]
name = bigxml
author = Rogdham
author_email = contact@rogdham.net
description = Pythonic xml parser to handle big files or streams
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rogdham/bigxml
project_urls =
    Documentation = https://bigxml.rogdham.net/
    Source = https://github.com/rogdham/bigxml
keywords = xml parser big stream
license = MIT
license_files = LICENSE.txt
platform = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Utilities
    Topic :: Text Processing :: Markup :: XML

[options]
package_dir = =src
packages = bigxml
python_requires = >=3.7
setup_requires =
    setuptools_scm
    wheel
install_requires =
    defusedxml>=0.7.1
